--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 #[submodule "wxWidgets"]
 #	path = wxWidgets
 #	url = https://github.com/wxWidgets/wxWidgets.git
+[submodule "googletest"]
+	path = googletest
+	url = https://github.com/google/googletest.git
