--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,9 @@ ADD_EXECUTABLE(test
 	src/searchCriteria.cpp
 	src/recommender.cpp
 	src/user.cpp
+	src/searchByGenre.cpp
+	src/searchByDirector.cpp
+	src/searchByTitle.cpp
 )
 
 TARGET_LINK_LIBRARIES(test gtest)
